kubernetes/kustomize/oauth2-proxy/overlays/prod/zuul/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: "4096"
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: nginx
  rules:
    - host: oauth2-proxy.eco.tsi-dev.otc-service.com
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: zuul-oauth-proxy
                port:
                  number: 4180
  tls:
    - hosts:
        - oauth2-proxy.eco.tsi-dev.otc-service.com
      secretName: oauth2-proxy-new-prod-cert
